--- a/indexcfc.html
+++ b/indexcfc.html
@@ -1,41 +1,28 @@
+<!--
+excerpt from an article by Sam Mularczyk
+found on medium.com
+https://medium.com/coding-design/54e4688e4ee5
+-->
 <link rel="stylesheet" href="styles.css">
 
-<HTML>
+<h1>Escuela<br /> Jorge Raul Recalde<br />Recuperando Compus</h1>
+  
+<p><em>Recuperemos computadoras para las comunidades educativas.</em></p>
 
-<HEAD>
+<hr>
 
-<TITLE>Un t&iacute;tulo principal</TITLE>
+<p>Es increíble la cantidad de computadoras utilizables que tenemos tiradas en algún rincón de la casa, oficina o escuela.</p>
 
-</HEAD>
+<p>Por medio de la particiación de estudiantes, maestras y equipo directivo, estamos trabajando en la recuperación de las computadoras de escritorio
+ en desuso. La directora, maestras y estudiantes van reviviendo los equipos por medio de la instalación del sistema operativo libre Lubuntu &mdash; Recuperamos en comunidad el poder de cómputo.</p>
 
-<BODY>
+<h2>Primer acercamiento</h2>
+<p>La dirección se preguntó ¿Qué podemos hacer con las viejas computadoras de escritorio que desde hace años parecen obsoletas? </p>
+<hr>
 
-<H1>Otro t&iacute;tulo principal</H1>
+<h2>Segundo paso: Visita a la Escuela. Diagnstico y prueba</h2>. 
+<p>El facilitador pedagógico y la directora probaron y vieron que se podían recuperar las computadoras de escritorio. Ellas eran 18 y contaban con sistemas operativos obsoletos. Pese a sus "escasos" 1GiB de memoria Ram, pudimos instalar el sistema operativo Lubuntu en tres de ellas.</p>
 
-<P> <IMG SRC= «…/imagen.png»>
-
-<P>Esto es un p&aacute;rrafo con informaci&oacute;n con un salto de l&iacute;nea.
-
-<BR> después de la etiqueta anterior. Tambien con <STRONG>negritas </STRONG> para complementar.
-
-<P>Otro párrafo corto.
-
-<H3>Un subtitulo<H3>
-
-<P>Otro párrafo con un <a href= «www.ejemplos.net»>enlace</a>
-
-<HR>
-
-<UL>
-
-<LI> Esto es una lista no ordenada.
-
-<LI> Un item de la lista.
-
-<LI> Otro item de la lista.
-
-</UL>
-
-</BODY>
-
-</HTML>
+<p>Sometimes you’ll see mockups and they’ll be impossible (or at least, very complicated) to implement. Web designers now, more than ever, need an in-depth understanding of their medium — otherwise you won’t be able to design effective, functional sites.</p>
+<p class="etc">Puedes descargar el sistema operativo Lubuntu que utilizamos en <a href="https://cdimage.ubuntu.com/lubuntu/releases/18.04/release/">cdimage.ubuntu.com</a></p>
+   </script>
