--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ https://medium.com/coding-design/54e4688e4ee5
 -->
 <link rel="stylesheet" href="styles.css">
 
-<h1>Escuela<br /> Jorge Raul Recalde<br />Recuperando Compus</h1>
+<h1>Cabaret<br /> Fútbol<br />Club</h1>
   
 <p><em>Recuperemos computadoras para las comunidades educativas.</em></p>
 
