--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ https://medium.com/coding-design/54e4688e4ee5
 
 <h1>Cabaret<br /> Fútbol<br />Club</h1>
   
-<p><em>Recuperemos computadoras para las comunidades educativas.</em></p>
+<p><em>Al Cabaret no se la muestra nadie.</em></p>
 
 <hr>
 
