--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
-<!--
-excerpt from an article by Sam Mularczyk
-found on medium.com
-https://medium.com/coding-design/54e4688e4ee5
--->
-<link rel="stylesheet" href="styles.css">
-
-<h1>Cabaret<br /> Fútbol<br />Club</h1>
-  
-<p><em>Al Cabaret no se la muestra nadie.</em></p>
-
-<hr>
-
-<p>Es increíble la cantidad de computadoras utilizables que tenemos tiradas en algún rincón de la casa, oficina o escuela.</p>
-
-<p>Por medio de la particiación de estudiantes, maestras y equipo directivo, estamos trabajando en la recuperación de las computadoras de escritorio
- en desuso. La directora, maestras y estudiantes van reviviendo los equipos por medio de la instalación del sistema operativo libre Lubuntu &mdash; Recuperamos en comunidad el poder de cómputo.</p>
-
-<h2>Primer acercamiento</h2>
-<p>La dirección se preguntó ¿Qué podemos hacer con las viejas computadoras de escritorio que desde hace años parecen obsoletas? </p>
-<hr>
-
-<h2>Segundo paso: Visita a la Escuela. Diagnstico y prueba</h2>. 
-<p>El facilitador pedagógico y la directora probaron y vieron que se podían recuperar las computadoras de escritorio. Ellas eran 18 y contaban con sistemas operativos obsoletos. Pese a sus "escasos" 1GiB de memoria Ram, pudimos instalar el sistema operativo Lubuntu en tres de ellas.</p>
-
-<p>Sometimes you’ll see mockups and they’ll be impossible (or at least, very complicated) to implement. Web designers now, more than ever, need an in-depth understanding of their medium — otherwise you won’t be able to design effective, functional sites.</p>
-<p class="etc">Puedes descargar el sistema operativo Lubuntu que utilizamos en <a href="https://cdimage.ubuntu.com/lubuntu/releases/18.04/release/">cdimage.ubuntu.com</a></p>
-   </script>
+<!doctype html>
+<html lang="en">
+    <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href={{.StylesPath}} />
+        <meta charset="utf-8">
+        <title>Untitled Custom SSG</title>
+    </head>
+    <body class="container">
+        <div class="content">
+            {{.Content}}
+        </div>
+    </body>
+</html>
