--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" href={{.StylesPath}} />
-        <meta charset="utf-8">
-        <title>Untitled Custom SSG</title>
-    </head>
-    <body class="container">
-        <div class="content">
-            {{.Content}}
-        </div>
-    </body>
-</html>
+<!--
+excerpt from an article by Sam Mularczyk
+found on medium.com
+https://medium.com/coding-design/54e4688e4ee5
+-->
+<link rel="stylesheet" href="styles.css">
+
+<h1>Escuela<br /> Jorge Raul Recalde<br />Recuperando Compus</h1>
+  
+<p><em>Recuperemos computadoras para las comunidades educativas.</em></p>
+
+<hr>
+
+<p>Es increíble la cantidad de computadoras utilizables que tenemos tiradas en algún rincón de la casa, oficina o escuela.</p>
+
+<p>Por medio de la particiación de estudiantes, maestras y equipo directivo, y en compañía del Facilitador Pedagógico de Educación Digital Córdoba, estamos trabajando en la recuperación de las computadoras de escritorio
+ en desuso. La directora, maestras y estudiantes van reviviendo los equipos por medio de la instalación del sistema operativo libre Lubuntu &mdash; Recuperamos en comunidad el poder de cómputo.</p>
+
+
+<h2>Nace la idea. Mayo 2022 </h2>
+<br>
+<img src="images/00recalde.jpg" width="250"height="125">
+
+<p>La dirección se preguntó ¿Qué podemos hacer con las viejas computadoras de escritorio que desde hace años parecen obsoletas? </p>
+<hr>
+
+<h2>Segundo paso: Visita a la Escuela. Diagnóstico y prueba. Martes 14/06/2022</h2>
+<br>
+<img src="images/01Recalde" width="250"height="125">
+<p>El facilitador pedagógico y la directora probaron y vieron que se podían recuperar las computadoras de escritorio. Ellas eran 18 y contaban con sistemas operativos obsoletos. Pese a sus "escasos" 1GiB de memoria Ram, pudimos instalar el sistema operativo Lubuntu en tres de ellas. La Recalde01, Recalde02 y Recalde03.</p>
+<hr>
+
+<h2>Tercer paso: Visita a la Escuela. Las docentes formatearon una computadora. Jueves 11/08/2022</h2> 
+<br>
+<img src="images/02recalde.jpg" width="250"height="125">
+<p>El proyecto de re-apropiación y de recuperación de computadoras sigue adelante. Las docentes de la escuela se juntaron con el facilitador pedagógico y con sus propias manos instalaron el sistema operativo Lubuntu. Se rehabilitó una cuarta computadora, la Recalde04, que quedó reutilizable. Esta etapa nos permite pensar en el próximo encuentro, donde serán los y las estudiantes quienes revivan sus computadoras. Además, aprovechamos de abrir un gabinete de computadora para familiarizarnos con los componentes internos de éstas, sobre todo procesador y memoria ram. Reconocer y tocar estas partes como un acto concreto que nos puede ayudar a entender mejor cómo funcionan y cómo las podemos recuperar u optimizar.</p>
+<hr>
+
+<h2>Cuarto paso: Las y los estudiantes de sexto grado formatearon seis computadoras. Jueves 10/11/2022</h2> 
+<br>
+<img src="images/03Recalde.jpg" width="250"height="125">
+<p>Con una conversación muy interesante protagonizada por estudiantes, docentes, directora y el Facilitador Pedagógico de Educación Digital Córdoba, logramos la gran meta 2022: Las y los estudiantes de la Escuela Raul Recalde, Barrio Sol Naciente, recuperaron seis computadoras que ahora están a disposoción de la comunuidad educativa.
+
+Con sus propias manos. Las y los estudiantes formatearon seis computadoras del año 2009, que ahora son equipos totalmente funcionales. En total participaron 32 estudiantes de sexto grado. Aprovechamos de hablar del derecho a reparar computadoras, a recuperar y a tomar decisiones sobre el uso de los equipos computacionales en general. Sin olvidar, uno de los puntos principales del trabajo institucional de la Escuela que tiene que ver con el cuidado del ambiente. Recuperar computadoras es un modo de ayudar.
+
+Total de computadoras recuperadas este año: 10.</p>
+<hr>
+
+<p class="etc">Puedes descargar el sistema operativo Lubuntu que utilizamos en <a href="https://cdimage.ubuntu.com/lubuntu/releases/18.04/release/">cdimage.ubuntu.com</a></p>
+   </script>
+
+
+
